# suitetalk

./: .gitignore  ChangeLog.md  README.markdown  README.md  runtests.sh  shell.nix  suitetalk.cabal
lib/SuiteTalk/: Auth.hs  SOAP.hs  WSDL.hs  XML.hs
lib/SuiteTalk/Auth/: Internal.hs  Types.hs
scripts/: upload-docs.sh
src/: Auth.hs  Example.hs  Main.hs
tests/: test.hs
tests/fixtures/: netsuite.wsdl.xml
