cabal-version:       >=1.10
name:                suitetalk
version:             0.1.0.0

homepage:            https://github.com/tricycle/suitetalk
bug-reports:         https://github.com/tricycle/suitetalk/issues
-- synopsis:
-- description:
license:             MPL-2.0
license-file:        LICENSE
author:              Chris D'Aloisio
maintainer:          chris.daloisio@bellroy.com
copyright:           2018 Chris D'Aloisio
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md

library suitetalk-lib
  exposed-modules:
    SuiteTalk.Auth
    SuiteTalk.Auth.Internal
  -- other-modules:
  -- other-extensions:
  build-depends:
      base >=4.11 && <4.12
    , text ==1.2.3.*
  hs-source-dirs:
    lib
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings

executable suitetalk
  main-is:
    Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.11 && <4.12
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  build-depends:
      base >= 4 && < 5
    , suitetalk-lib
    , tasty == 1.2.*
    , tasty-hunit == 0.10.0.*
