cabal-version:       2.2
name:                suitetalk
version:             0.0.1.0

homepage:            https://github.com/cdaloisio/suitetalk
bug-reports:         https://github.com/cdaloisio/suitetalk/issues
synopsis:
    Connection tools for Oracle Netsuite / SuiteTalk SOAP
description:
    .
    Connection tools for Oracle Netsuite / SuiteTalk SOAP
    .
    This package is a work in progress.
    .
    It currently contains:
    .
    - modules for making requests to Netsuite via SuiteTalk SOAP
    - capability for Token authentication
    - validations for operations and request endpoint generated via a WSDL specification
    .
    Check the example executable in `src/Example.hs` for more details on how to use it.
license:             MPL-2.0
license-file:        LICENSE
author:              Chris D'Aloisio
maintainer:          chris.daloisio@gmail.com
copyright:           2018-2019 Chris D'Aloisio
category:            Web
build-type:          Simple
extra-source-files:
    ChangeLog.md
    README.md

library suitetalk-lib
  exposed-modules:
    SuiteTalk.Auth
    SuiteTalk.Auth.Types
    SuiteTalk.Auth.Internal
    SuiteTalk.SOAP
    SuiteTalk.WSDL
    SuiteTalk.XML
  -- other-modules:
  -- other-extensions:
  build-depends:
      base >=4.11 && <4.12
    , bytestring >= 0.10.8 && < 0.11
    , data-default >= 0.7.1 && < 0.8
    , http-client >= 0.5.14 && < 0.6
    , text >= 1.2.3 && < 1.3
    , random >= 1.1 && < 1.2
    , http-client-tls >= 0.3.5 && < 0.4
    , http-conduit >= 2.3.4 && < 2.4
    , soap >= 0.2.3 && < 0.3
    , xml-conduit >= 1.8.0 && < 1.9
    , xml-conduit-writer >= 0.1.1 && < 0.2
    , cryptonite >= 0.25 && < 0.26
    , time >= 1.8 && < 1.9
  hs-source-dirs:
    lib
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings
  ghc-options:
    -Wall

executable suitetalk-example
  main-is:
    Example.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
      base >=4.11 && <4.12
    , suitetalk-lib
    , text
    , xml-conduit
    , xml-conduit-writer
  hs-source-dirs:
    src
  default-language:
    Haskell2010

executable suitetalk-generate-datatypes
  main-is:
    Generate.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
      base >=4.11 && <4.12
    , suitetalk-lib
    , text
  hs-source-dirs:
    src
  default-language:
    Haskell2010

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  build-depends:
      base >= 4 && < 5
    , suitetalk-lib
    , tasty == 1.2.*
    , tasty-hunit == 0.10.0.*
    , data-default
    , xml-conduit

source-repository head
  type:     git
  location: https://github.com/cdaloisio/suitetalk
